@@ -13,13 +13,13 @@ The Perl Foundation. Consult the "LICENSE.txt" file for details.
 % (you must quit and restart Logtalk for each testing scenario):
 
 
-% run benchmarks with event support turned on:
+% run benchmarks with event support turned on and without using static binding:
 
 | ?- logtalk_load(benchmarks(loader_events)).
 ...
 
 
-% run benchmarks with event support turned off:
+% run benchmarks with event support turned off and without using static binding:
 
 | ?- logtalk_load(benchmarks(loader_no_events)).
 ...
